--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-GServ::WebAppServer is an application server whos purpose is to rapidly create
+Yote::WebAppServer is an application server whos purpose is to rapidly create
   application mockups in perl based on idiom and design.
 
 AppServer.pm is the main file. 
