--- a/README.pod
+++ b/README.pod
@@ -5,11 +5,40 @@ YOTE
 =head1 Summary
 
 Yote is a platform for creating web based applications by bridging
-client side javascript with server side, automatically persistant perl
+client side javascript with server side, automatically persistent perl
 objects. Yote provides javascript objects with methods that map to
 their server side counterparts.
 
 See http://fenowyn.com/yote for more information.
+
+=head1 Quickstart for OSX / Linux
+
+In the following directions, $SITE_ROOT is the document root of your
+web site and $YOTE_ROOT is the directory where the Yote Build.PL file
+resides.
+
+=over 4
+
+=item 1. Ensure you have a web server that will serve CGIs
+
+=item 2. Install stuff and start the server
+
+    $ perl Build.PL
+    $ ./Build
+    $ ./Build installdeps
+    $ ./Build install
+    $ mkdir -p $SITE_ROOT/js
+    $ cp $YOTE_ROOT/javascript/* $SITE_ROOT
+    $ cp cgi/yote.cgi $CGI_BIN/
+    $ chmod 755 $CGI_BIN/yote.cgi
+    $ export PERL5LIB=$YOTE_ROOT/lib:$PERL5LIB
+    $ script/yote_server
+
+=item 3. Write your own code (e.g. "hello world" app, website code, etc)
+
+=item 4. Profit!!! 
+
+=back
 
 =head1 Requirements
 
@@ -21,9 +50,18 @@ See http://fenowyn.com/yote for more information.
 
 =item * jquery (provided with this distribution, or from http://docs.jquery.com/Downloading_jQuery)
 
+=item * Some sort of server-side storage (MySQL or a writable file)
+
 =back
 
-=head1 Setup
+=head1 Install Yote
+
+    $ perl Build.PL
+    $ ./Build
+    $ ./Build test
+    $ ./Build install
+
+=head1 Verify / install the requirements
 
 Following is how to verify that you have each of the requirements and,
 if not, to get it.
@@ -34,7 +72,7 @@ if not, to get it.
 
 To verify if you have this:
 
-       $ which perl
+       $ perl -v
 
 If your version is too low, look at using perlbrew to upgrade:
 
@@ -43,28 +81,34 @@ If your version is too low, look at using perlbrew to upgrade:
 (From the perlbrew docs:)
 
        $ curl -kL http://install.perlbrew.pl | bash
-       $ perl install 5.14.2  # Current version as of 2012-01-20
+       $ ~/perl5/perlbrew/bin/perlbrew install 5.14.2  # Current version as of 2012-01-20
+       $ ~/perl5/perlbrew/bin/perlbrew use 5.14.2
+       $ perl -v  # Should now tell you 5.14.2
 
 This installs the perlbrew executable, the perl-5.14.2 executable, and
-all core Perl modules into ~/perl5/perlbrew/.
+all core Perl modules into ~/perl5/perlbrew/.  It then sets the
+current shell to use the new version.
 
 You may also want to use cpanm (or another CPAN shell) to install
 additional modules for the new perl version.
 
-=item * Server-side storage: a writable file or a MySQL database
+=item * Storage
 
-MySQL storage is OPTIONAL!  If you just want to do a quick test, file
-storage should be fine.  If you want MySQL storage, verify / install
-as follows:
+Yote needs to store data server side.  This can be in a MySQL
+database or a file (which will become a SQLite database).  Other
+options, including MongoDB, are in the works -- patches welcome!
+
+If you want MySQL storage, verify / install as follows:
 
 
 OSX has MySQL installed by default.  Verify that it's running by
 doing: 
 
- $ mysql -u root
+       $ mysql -u root
 
 (NOTE: For simplicity, the directions in this README connect to MySQL
-as 'root'.  In practice, you should use a separate user with lower
+as 'root'.  This will work and it makes these directions easier, but
+in general practice you should connect via a user with lower
 permissions.)
 
 
@@ -77,9 +121,7 @@ latest as of 2012-01-20).
 Once MySQL is running, create a database for Yote to use and
 initialize it as follows:
 
-       $ mysql -u root
-       mysql> create database yote;
-       mysql> \q
+       $ echo 'create database yote;' | mysql -u root
        $ script/init_datastore.pl 
 
 !!!
@@ -93,7 +135,7 @@ OSX has Apache installed by default.  To verify it is running and
 allow it to run CGIs, do the following:
 
        System Preferences > Sharing > Web Sharing 
-         
+     
 Ensure that the checkbox is checked; if so, the web server is up.
 
 
@@ -107,21 +149,21 @@ On Linux, @@TODO
 
 =item * yote.cgi
 
- $ cp cgi/yote.cgi $CGI_BIN/
- $ chmod 755 $CGI_BIN/yote.cgi
+    $ cp cgi/yote.cgi $CGI_BIN/
+    $ chmod 755 $CGI_BIN/yote.cgi
 
 =item * jquery
 
 On OSX or Linux:
 
- $ mkdir -p $SITE_ROOT/js
- $ cp $YOTE_ROOT/javascript/* $SITE_ROOT/js
+    $ mkdir -p $SITE_ROOT/js
+    $ cp $YOTE_ROOT/javascript/* $SITE_ROOT/js
 
 =item * put the Yote::WebAppServer module in your path
 
 On OSX / Linux:
 
- $ export PERL5LIB=$YOTE_ROOT/lib:$PERL5LIB
+    $ export PERL5LIB=$YOTE_ROOT/lib:$PERL5LIB
 
 =item * modify the start_server.pl file
 
@@ -151,8 +193,8 @@ Starting the Web App Server from a package:
        my $server = new Yote::WebAppServer();
 
        $server->start_server( port => 8008,
-                              datastore  => 'Yote::SQLiteIO',
-                              sqlitefile => 'yote.database' );
+                  datastore  => 'Yote::SQLiteIO',
+                  sqlitefile => 'yote.database' );
 
 
 
@@ -173,23 +215,25 @@ Starting the Web App Server from a package:
 
 =head3 Server Side
 
-       package Yote::Hello;
+    package Yote::Hello;
 
-       use strict;
-       use Yote::Obj;
-       use base 'Yote::AppRoot';
+    use strict;
+    use Yote::Obj;
+    use base 'Yote::AppRoot';
 
-       sub init {
-           my $self = shift;
-           my $counter = $self->get_counter( new Yote::Obj() );
-       }
-       sub hello {
-           my( $self, $data, $acct ) = @_;
-           my $name = $data->{name};
-           my $counter = $self->get_counter();
-           $counter->set_count( $counter->get_count() + 1 );
-           return "hello there '$name'. I have said hello ". $counter->get_count() . " times.";
-       }
-       1;
+    sub init {
+        my $self = shift;
+        my $counter = $self->get_counter( new Yote::Obj() );
+    }
+
+    sub hello {
+        my( $self, $data, $acct ) = @_;
+        my $name = $data->{name};
+        my $counter = $self->get_counter();
+        $counter->set_count( $counter->get_count() + 1 );
+        return "hello there '$name'. I have said hello ". $counter->get_count() . " times.";
+    }
+
+    1;
 
 =cut
